--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gulp": "^3.8.11"
   },
   "devDependencies": {
+    "browser-sync": "^2.7.1",
     "express": "^4.12.3",
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
