--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
   },
   "devDependencies": {
     "browser-sync": "^2.7.1",
-    "express": "^4.12.3",
     "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
+    "gulp-copy": "0.0.2",
     "gulp-csslint": "^0.1.5",
     "gulp-cssmin": "^0.1.7",
     "gulp-jshint": "^1.10.0",
-    "gulp-livereload": "^3.8.0",
     "gulp-open": "^0.3.2",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^1.3.3",
